<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/novedades"
            android:title="@string/novedades" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/galeria"
            android:title="@string/galer_a" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/calendario"
            android:title="@string/calendario_y_eventos" />

        <!--
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="" /> -->
    </group>

    <item android:title="@string/ajustes">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/perfil"
                android:title="@string/perfil" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ajustes"
                android:title="@string/cuenta" />
        </menu>
    </item>

</menu>
